# GW15

01/10/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
01/10/Task_1/: Task_1.sln
01/20/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
02/Prodv01/: Prodv01.sln
02/Prodv01/Prodv01/: Prodv01.cpp  Prodv01.vcxproj
03/CleverMass_1/: CleverMass_1.sln
03/CleverMass_1/CleverMass_1/: CleverMass_1.cpp  CleverMass_1.vcxproj
03/CleverMass_2/: CleverMass_2.sln
03/CleverMass_2/CleverMass_2/: CleverMass_2.cpp  CleverMass_2.vcxproj
04/: CMakeLists.txt  task01.cpp  tests.cpp
05/Task1_funkt/: Task1_funkt.sln
05/Task1_funkt/Task1_funkt/: Task1_funkt.cpp  Task1_funkt.vcxproj
05/Task2_funkt/: Task2_funkt.sln
05/Task2_funkt/Task2_funkt/: Task2_funkt.cpp  Task2_funkt.vcxproj
05/Task3_funct/: Task3_funct.sln
05/Task3_funct/Task3_funct/: Task3_funct.cpp  Task3_funct.vcxproj
06/container01/: container01.sln
06/container01/container01/: container01.cpp  container01.vcxproj
06/container02/: container02.sln
06/container02/container02/: container02.cpp  container02.vcxproj
07/SLNvec02/: SLNvec02.sln
07/STLvec01/: STLvec01.sln
08/Clone_f_matr01/: Clone_f_matr01.sln
08/mistake02/: mistake02.sln
09/Calc_big_numbers/: Calc_big_numbers.sln
09/Tr_01/: Tr_01.sln
Alg0108/: Alg0108.sln
Alg0108/Alg0108/: Alg0108.cpp  Alg0108.vcxproj  Matr.txt
Alg0208/: Alg0208.sln
Alg0208/Alg0208/: Alg0208.cpp  Alg0208.vcxproj  Graph.txt
Postgre/: Task2.docx
Thread_00/Thread_1/: Thread_1.sln
Thread_00/Thread_2/: Thread_2.sln
alg4/massive02/: massive02.cpp  massive02.sln
(+39 files in other folders)
